* Add my superbar. * Fix z-index issue on blog - floating nav hides blog admin bar.

--- a/branches/website/xmtuner.css
+++ b/branches/website/xmtuner.css
@@ -82,7 +82,7 @@ h2.green {
 	font-size: 16px;
 	font-weight: bold;
 	-moz-border-radius-bottomleft: 10px;
-	z-index: 1000;
+	z-index: 100000;
 }
 
 #superbar a, #superbar a:visited {
